--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,30 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 server.tomcat.basedir=tomcat
 
+logging.file.name=application.log
 
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
+
+debug=false
+
+#logging.level.root=INFO
+#logging.level.org.springframework=ERROR
+logging.level.com.blog.bootapp=TRACE
+
+
+#
+## Logging pattern for the console
+#logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n
+#
+# Logging pattern for file
+logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
+#
+## Output to a temp_folder/file
+#logging.file=C:/Users/ADMIN/IdeaProjects/bootapp/logs/Bootappapplication.log
+#
+##logging.path=/my-folder/
+#
+### Logging pattern for file
+##logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
+
