--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,24 @@
 <!--			<version>2.2.2.RELEASE</version>-->
 <!--		</dependency>-->
 
+<!--		<dependency>-->
+<!--			<groupId> org.apache.cassandra</groupId>-->
+<!--			<artifactId>cassandra-all</artifactId>-->
+<!--			<version>0.8.1</version>-->
+
+<!--			<exclusions>-->
+<!--				<exclusion>-->
+<!--					<groupId>org.slf4j</groupId>-->
+<!--					<artifactId>slf4j-log4j12</artifactId>-->
+<!--				</exclusion>-->
+<!--				<exclusion>-->
+<!--					<groupId>log4j</groupId>-->
+<!--					<artifactId>log4j</artifactId>-->
+<!--				</exclusion>-->
+<!--			</exclusions>-->
+
+<!--		</dependency>-->
+
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -75,6 +93,16 @@
 			<version>1.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
