--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<artifactId>bootapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bootapp</name>
+	<packaging>war</packaging>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
