--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ logging.file.name=application.log
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
-debug=false
+#debug=false
 
-#logging.level.root=INFO
+logging.level.root=WARN
 #logging.level.org.springframework=ERROR
 logging.level.com.blog.bootapp=TRACE
 
